--- a/to_html_testing.ipynb
+++ b/to_html_testing.ipynb
@@ -449,9 +449,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venvp",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "venvp"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -463,7 +463,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.4"
   }
  },
  "nbformat": 4,
